syntax = "proto3";

package employee;

option java_multiple_files = true;
option java_package = "com.roomreservation.contracts.employee.grpc";

service EmployeeGrpcService {
  rpc GetEmployeeSummary(GetEmployeeSummaryRequest) returns (GetEmployeeSummaryResponse);
}

message GetEmployeeSummaryRequest {
  int64 employeeId = 1;
}

message GetEmployeeSummaryResponse {
  bool exists = 1;
  int64 employeeId = 2;
  string fullName = 3;
}